# Industrial_Cameras_SDK

./: .gitignore  CMakeLists.txt  README.md
Include/: CameraCloser.h  CameraDisplay.h  CameraGrabber.h  CameraOpener.h  ImageSaver.h
src/: CameraCloser.cpp  CameraDisplay.cpp  CameraGrabber.cpp  CameraOpener.cpp  ImagerSaver.cpp  main.cpp
